--- a/EF/EF.csproj
+++ b/EF/EF.csproj
@@ -52,13 +52,13 @@
     <Compile Include="Configer\PublicCharConfiger.cs" />
     <Compile Include="Configer\SalaryConfiger.cs" />
     <Compile Include="Configer\UserConfiger.cs" />
-    <Compile Include="PublicChar.cs" />
-    <Compile Include="Salary.cs" />
-    <Compile Include="User.cs" />
+    <Compile Include="Entity\PublicChar.cs" />
+    <Compile Include="Entity\Salary.cs" />
+    <Compile Include="Entity\User.cs" />
     <Compile Include="Configer\StudentConfiger.cs" />
     <Compile Include="MyDbContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Student.cs" />
+    <Compile Include="Entity\Student.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
