--- a/IDAO/IDAO.csproj
+++ b/IDAO/IDAO.csproj
@@ -40,9 +40,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IoneorganizationDAO.cs" />
     <Compile Include="IPublicCharDAO.cs" />
     <Compile Include="ISalaryDAO.cs" />
     <Compile Include="IStudentDAO.cs" />
+    <Compile Include="IthreeorganizationDAO.cs" />
+    <Compile Include="ItwoorganizationDAO.cs" />
     <Compile Include="IUserDAO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
