--- a/WebApplication1/Unity.config
+++ b/WebApplication1/Unity.config
@@ -16,7 +16,10 @@
 
         <register type="IBLL.IPublicCharBLL,IBLL" mapTo="BLL.PublicCharBLL,BLL" name="PublicCharBLL"></register>
         <register type="IBLL.ISalaryBLL,IBLL" mapTo="BLL.SalaryBLL,BLL" name="SalaryBLL"></register>
-        </container>
+        <register type="IBLL.IoneorganizationBLL,IBLL" mapTo="BLL.oneorganizationBLL,BLL" name="oneorganizationBLL"></register>
+        <register type="IBLL.ItwoorganizationBLL,IBLL" mapTo="BLL.twoorganizationBLL,BLL" name="twoorganizationBLL"></register>
+        <register type="IBLL.IthreeorganizationBLL,IBLL" mapTo="BLL.threeorganizationBLL,BLL" name="threeorganizationBLL"></register>
+      </container>
   
     </containers>
   </unity>
