--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -40,10 +40,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="oneorganizationBLL.cs" />
     <Compile Include="PublicCharBLL.cs" />
     <Compile Include="SalaryBLL.cs" />
     <Compile Include="StudentBLL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="threeorganizationBLL.cs" />
+    <Compile Include="twoorganizationBLL.cs" />
     <Compile Include="UserBLL.cs" />
   </ItemGroup>
   <ItemGroup>
