--- a/DAO/DAO.csproj
+++ b/DAO/DAO.csproj
@@ -43,11 +43,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="oneorganizationDAO.cs" />
     <Compile Include="PublicCharDAO.cs" />
     <Compile Include="SalaryDAO.cs" />
     <Compile Include="StudenDAO.cs" />
     <Compile Include="DaoBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="threeorganizationDAO.cs" />
+    <Compile Include="twoorganizationDAO.cs" />
     <Compile Include="UserDAO.cs" />
   </ItemGroup>
   <ItemGroup>
