--- a/IBLL/IBLL.csproj
+++ b/IBLL/IBLL.csproj
@@ -40,9 +40,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IoneorganizationBLL.cs" />
     <Compile Include="IPublicCharBLL.cs" />
     <Compile Include="ISalaryBLL.cs" />
     <Compile Include="IStudentBLL.cs" />
+    <Compile Include="IthreeorganizationBLL.cs" />
+    <Compile Include="ItwoorganizationBLL.cs" />
     <Compile Include="IUserBLL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
