--- a/DAO/DAO.csproj
+++ b/DAO/DAO.csproj
@@ -43,6 +43,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DBHelper.cs" />
+    <Compile Include="MajorChenDAO.cs" />
+    <Compile Include="MajorDAO.cs" />
+    <Compile Include="MajorKindDAO.cs" />
     <Compile Include="PublicCharDAO.cs" />
     <Compile Include="SalaryDAO.cs" />
     <Compile Include="StudenDAO.cs" />
