--- a/IBLL/IBLL.csproj
+++ b/IBLL/IBLL.csproj
@@ -40,6 +40,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IMajorBLL.cs" />
+    <Compile Include="IMajorChenBLL.cs" />
+    <Compile Include="IMajorKindBLL.cs" />
     <Compile Include="IPublicCharBLL.cs" />
     <Compile Include="ISalaryBLL.cs" />
     <Compile Include="IStudentBLL.cs" />
