--- a/IDAO/IDAO.csproj
+++ b/IDAO/IDAO.csproj
@@ -40,6 +40,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IMajorChenDAO.cs" />
+    <Compile Include="IMajorDAO.cs" />
+    <Compile Include="IMajorKindDAO.cs" />
     <Compile Include="IPublicCharDAO.cs" />
     <Compile Include="ISalaryDAO.cs" />
     <Compile Include="IStudentDAO.cs" />
