--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -42,6 +42,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MajorChenModel.cs" />
+    <Compile Include="MajorKindModel.cs" />
+    <Compile Include="MajorModel.cs" />
     <Compile Include="PublicCharModel.cs" />
     <Compile Include="SalaryModel.cs" />
     <Compile Include="StudentModel.cs" />
