--- a/IDAO/IDAO.csproj
+++ b/IDAO/IDAO.csproj
@@ -43,8 +43,10 @@
     <Compile Include="IMajorChenDAO.cs" />
     <Compile Include="IMajorDAO.cs" />
     <Compile Include="IMajorKindDAO.cs" />
+    <Compile Include="IMajor_changeDAO.cs" />
     <Compile Include="IoneorganizationDAO.cs" />
     <Compile Include="IPublicCharDAO.cs" />
+    <Compile Include="IRoleDAO.cs" />
     <Compile Include="ISalaryDAO.cs" />
     <Compile Include="IStudentDAO.cs" />
     <Compile Include="IthreeorganizationDAO.cs" />
