--- a/WebApplication1/Unity.config
+++ b/WebApplication1/Unity.config
@@ -13,7 +13,6 @@
       <container name="containerTwo">
         <register type="IBLL.IStudentBLL,IBLL" mapTo="BLL.StudentBLL,BLL" name="StudentBLL"></register>
         <register type="IBLL.IUserBLL,IBLL" mapTo="BLL.UserBLL,BLL" name="UserBLL"></register>
-
         <register type="IBLL.IPublicCharBLL,IBLL" mapTo="BLL.PublicCharBLL,BLL" name="PublicCharBLL"></register>
         <register type="IBLL.ISalaryBLL,IBLL" mapTo="BLL.SalaryBLL,BLL" name="SalaryBLL"></register>
         <register type="IBLL.IoneorganizationBLL,IBLL" mapTo="BLL.oneorganizationBLL,BLL" name="oneorganizationBLL"></register>
@@ -22,8 +21,8 @@
         <register type="IBLL.IMajorKindBLL,IBLL" mapTo="BLL.MajorKindBLL,BLL" name="MajorKindBLL"></register>
         <register type="IBLL.IMajorChenBLL,IBLL" mapTo="BLL.MajorChenBLL,BLL" name="MajorChenBLL"></register>
         <register type="IBLL.IMajorBLL,IBLL" mapTo="BLL.MajorBLL,BLL" name="MajorBLL"></register>
-
-
+       <register type="IBLL.IRoleBLL,IBLL" mapTo="BLL.RoleBLL,BLL" name="RoleBLL"></register>
+      
       </container>
   
     </containers>
