--- a/WebApplication1/Unity.config
+++ b/WebApplication1/Unity.config
@@ -22,6 +22,9 @@
         <register type="IBLL.IMajorKindBLL,IBLL" mapTo="BLL.MajorKindBLL,BLL" name="MajorKindBLL"></register>
         <register type="IBLL.IMajorChenBLL,IBLL" mapTo="BLL.MajorChenBLL,BLL" name="MajorChenBLL"></register>
         <register type="IBLL.IMajorBLL,IBLL" mapTo="BLL.MajorBLL,BLL" name="MajorBLL"></register>
+        <register type="IBLL.IresourceBLL,IBLL" mapTo="BLL.resourceBLL,BLL" name="resourceBLL"></register>
+        <register type="IBLL.IMajorWeiBLL,IBLL" mapTo="BLL.MajorWeiBLL,BLL" name="MajorWeiBLL"></register>
+        
 
 
       </container>
