--- a/WebApplication1/Unity.config
+++ b/WebApplication1/Unity.config
@@ -22,7 +22,8 @@
         <register type="IBLL.IMajorChenBLL,IBLL" mapTo="BLL.MajorChenBLL,BLL" name="MajorChenBLL"></register>
         <register type="IBLL.IMajorBLL,IBLL" mapTo="BLL.MajorBLL,BLL" name="MajorBLL"></register>
        <register type="IBLL.IRoleBLL,IBLL" mapTo="BLL.RoleBLL,BLL" name="RoleBLL"></register>
-      
+        <register type="IBLL.IAccessBLL,IBLL" mapTo="BLL.AccessBLL,BLL" name="AccessBLL"></register>
+        
       </container>
   
     </containers>
