--- a/EF/EF.csproj
+++ b/EF/EF.csproj
@@ -49,6 +49,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Configer\AccessConfig.cs" />
     <Compile Include="Configer\EngageTypeConfig.cs" />
     <Compile Include="Configer\JlConfiger.cs" />
     <Compile Include="Configer\LuYongConfig.cs" />
@@ -59,6 +60,7 @@
     <Compile Include="Configer\MianShiConfiger.cs" />
     <Compile Include="Configer\Major_changeConfig.cs" />
     <Compile Include="Configer\oneorganizationConfiger.cs" />
+    <Compile Include="Configer\PermissionsConfig.cs" />
     <Compile Include="Configer\PopedomsConfiger.cs" />
     <Compile Include="Configer\PublicCharConfiger.cs" />
     <Compile Include="Configer\SalaryBiaoZhunConfiger.cs" />
@@ -67,9 +69,11 @@
     <Compile Include="Configer\threeorganizationConfiger.cs" />
     <Compile Include="Configer\twoorganizationConfiger.cs" />
     <Compile Include="Configer\UserConfiger.cs" />
+    <Compile Include="Entity\Access.cs" />
     <Compile Include="Entity\EngageType.cs" />
     <Compile Include="Entity\Jl.cs" />
     <Compile Include="Entity\LuYong.cs" />
+    <Compile Include="Entity\Major.cs" />
     <Compile Include="Entity\MajorZW.cs" />
     <Compile Include="Entity\MajorChen.cs" />
     <Compile Include="Entity\MajorKind.cs" />
@@ -77,6 +81,7 @@
     <Compile Include="Entity\MajorRelease.cs" />
     <Compile Include="Entity\MianShi.cs" />
     <Compile Include="Entity\oneorganization.cs" />
+    <Compile Include="Entity\Permissions.cs" />
     <Compile Include="Entity\Popedoms.cs" />
     <Compile Include="Entity\PublicChar.cs" />
     <Compile Include="Entity\Role.cs" />
