--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AccessModel.cs" />
     <Compile Include="EngageTypeModel.cs" />
     <Compile Include="JlMondel.cs" />
     <Compile Include="LuYongModel.cs" />
@@ -49,11 +50,11 @@
     <Compile Include="MajorKindModel.cs" />
     <Compile Include="MajorModel.cs" />
     <Compile Include="Major_changeModel.cs" />
-    <Compile Include="MajorModel.cs" />
     <Compile Include="MajorZWModel.cs" />
     <Compile Include="MajorReleaseModel.cs" />
     <Compile Include="MianShiModel.cs" />
     <Compile Include="oneorganizationModel.cs" />
+    <Compile Include="PermissionsModel.cs" />
     <Compile Include="PopedomsModel.cs" />
     <Compile Include="PublicCharModel.cs" />
     <Compile Include="RoleModel.cs" />
