--- a/WebApplication1/Unity.config
+++ b/WebApplication1/Unity.config
@@ -23,7 +23,7 @@
         <register type="IBLL.IMajorBLL,IBLL" mapTo="BLL.MajorBLL,BLL" name="MajorBLL"></register>
        <register type="IBLL.IRoleBLL,IBLL" mapTo="BLL.RoleBLL,BLL" name="RoleBLL"></register>
         <register type="IBLL.IAccessBLL,IBLL" mapTo="BLL.AccessBLL,BLL" name="AccessBLL"></register>
-        
+        <register type="IBLL.IMajorReleaseBLL,IBLL" mapTo="BLL.MajorReleaseBLL,BLL" name="MajorReleaseBLL"></register>
         <register type="IBLL.IresourceBLL,IBLL" mapTo="BLL.resourceBLL,BLL" name="resourceBLL"></register>
         <register type="IBLL.IMajorWeiBLL,IBLL" mapTo="BLL.MajorWeiBLL,BLL" name="MajorWeiBLL"></register>
         
