--- a/WebApplication1/Unity.config
+++ b/WebApplication1/Unity.config
@@ -26,7 +26,11 @@
         <register type="IBLL.IMajorReleaseBLL,IBLL" mapTo="BLL.MajorReleaseBLL,BLL" name="MajorReleaseBLL"></register>
         <register type="IBLL.IresourceBLL,IBLL" mapTo="BLL.resourceBLL,BLL" name="resourceBLL"></register>
         <register type="IBLL.IMajorWeiBLL,IBLL" mapTo="BLL.MajorWeiBLL,BLL" name="MajorWeiBLL"></register>
-        
+        <register type="IBLL.ISalaryBiaoZhunBLL,IBLL" mapTo="BLL.SalaryBiaoZhunBLL,BLL" name="SalaryBiaoZhunBLL"></register>
+        <register type="IBLL.IMajorReleaseBLL,IBLL" mapTo="BLL.MajorReleaseBLL,BLL" name="MajorReleaseBLL"></register>
+        <register type="IBLL.IJlBLL,IBLL" mapTo="BLL.JlBLL,BLL" name="JlBLL"></register>
+        <register type="IBLL.IMianShiBLL,IBLL" mapTo="BLL.MianShiBLL,BLL" name="MianShiBLL"></register>
+        <register type="IBLL.ILuYongBLL,IBLL" mapTo="BLL.YuYongBLL,BLL" name="LuYongBLL"></register>
 
 
       </container>
