--- a/EF/EF.csproj
+++ b/EF/EF.csproj
@@ -55,9 +55,10 @@
     <Compile Include="Configer\JlConfiger.cs" />
     <Compile Include="Configer\LuYongConfig.cs" />
     <Compile Include="Configer\MajorChenConfig.cs" />
-    <Compile Include="Configer\MajorCondiger.cs" />
+    <Compile Include="Configer\MajorConfiger.cs" />
     <Compile Include="Configer\MajorKindConfig.cs" />
     <Compile Include="Configer\MajorReleaseConfiger.cs" />
+    <Compile Include="Configer\MajorZWCondiger.cs" />
     <Compile Include="Configer\MianShiConfiger.cs" />
     <Compile Include="Configer\Major_changeConfig.cs" />
     <Compile Include="Configer\MajorweiConfig.cs" />
